# Garage61MCP

./: .env.example  .gitignore  .gitmodules  GEMINI.md  LICENSE.md  README.md  package-lock.json  package.json  pyproject.toml  pytest.ini  test_integration.py
garage61_mcp/: client.py  models.py  server.py  telemetry_analysis.py  track_data.py
src/: api.ts  index.ts  types.ts
src/python/telemetry/: analyze_lap.py  plot_lap.py
tests/: test_client_integration.py  test_find_laps_group.py  test_find_laps_logic.py  test_integration.py  test_models.py  test_mrp.py  test_plots.py  test_server_integration.py
