[project]
name = "garage61_mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.0.1",
    "httpx>=0.24.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
garage61-mcp = "garage61_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
